# seg_mask_modifs

./: .gitignore  LICENSE  README.md  download_models.py  mask_generator.py  print_labels.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-app.yml
model_utils/: labels.json  model_celebmask.py  resnet.py
seg_mask_modifs/: download_models.py  mask_generator.py  mask_modifier.py  mask_utils.py  print_labels.py
seg_mask_modifs/model_utils/: labels.json  labels.py  model_celebmask.py
