[metadata]
name = seg_mask_modifs-vardanagarwal
version = 1.0
author = Vardan Agarwal
author_email = vardanagarwal16@gmail.com
description = Package to generate segmentation masks and modify them
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/seg_mask_modifs
project_urls =
    Bug Tracker = https://github.com/pypa/seg_mask_modifs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
max-line-length = 127